feat(cluster): add endpoint for cluster requests without auth
